; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyMulI4.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyMulI4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATHVARS1 = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarCyMulI4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarCyMulI4() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @MATHVARS1, align 4
  %3 = call i32 @MATHMULI4(double 5.344430e+05, i32 0)
  %4 = call i32 @EXPECTCY(i32 0)
  %5 = call i32 @MATHMULI4(double 5.000000e-01, i32 1)
  %6 = call i32 @EXPECTCY(i32 0)
  %7 = call i32 @MATHMULI4(double 5.000000e-01, i32 2)
  %8 = call i32 @EXPECTCY(i32 1)
  %9 = call i32 @MATHMULI4(double 0x430A36E2EB1C4320, i32 1)
  %10 = call i32 @EXPECTCY64(i64 2147483647, i64 4294951488)
  %11 = call i32 @MATHMULI4(double 0x430A36E2EB1C4320, i32 2)
  %12 = load i32, i32* @EXPECT_OVERFLOW, align 4
  ret void
}

declare dso_local i32 @MATHMULI4(double, i32) #1

declare dso_local i32 @EXPECTCY(i32) #1

declare dso_local i32 @EXPECTCY64(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
